--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Check-out repository
         uses: actions/checkout@v3
 
-      - name: Install poetry
+      - name: Install flit
         run: pip install flit
 
       - name: Install package
